--- a/Nandoso/Nandoso.csproj
+++ b/Nandoso/Nandoso.csproj
@@ -155,6 +155,8 @@
     <Content Include="Scripts\formValidator-4.0.1.js" />
     <Content Include="Scripts\formValidatorRegex.js" />
     <Content Include="specials.txt" />
+    <None Include="Properties\PublishProfiles\NandosoGaoxin - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\NandosoGaoxin - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
